deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vcverifier-testing
spec:
  selector:
    matchLabels:
      app: vcverifier-testing   
  template:
    metadata:
      labels:
        app: vcverifier-testing   
    spec:
      containers:
      - name: verifier
        image: harbor.tango.rid-intrasoft.eu/ssikit-waltid/vcverifier:v1.0
        ports:
        - containerPort: 3000     
        volumeMounts:
        - name: config-volume
          mountPath: /configs/
      volumes:
      - name: config-volume
        configMap:
          name: vcverifier-testing-config
