service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcverifier-testing
  labels:
    app: vcverifier-testing            
spec:
  type: ClusterIP
  selector:
    app: vcverifier-testing           
  ports:
  - name: http
    port: 3000                         
    targetPort: 3000
